--- a/candidatos/templates/kanban_column.html
+++ b/candidatos/templates/kanban_column.html
@@ -3,12 +3,17 @@
     
     <h3 class="p-4 text-sm font-bold text-gray-800 bg-gray-50 border-b border-gray-200 flex justify-between items-center">
         <span>
-            {{ title }} (<span id="count-{{ status_key }}">{{ data|length }}</span>)
+            {% if status_key == 'CAPACITACION_PRACTICA' %}
+                OJT 
+            {% else %}
+                {{ title }}
+            {% endif %}
+             (<span id="count-{{ status_key }}">{{ data|length }}</span>)
         </span>
         
         <a href="{% url 'exportar_candidatos_excel' estado=status_key %}" 
             class="text-blue-600 hover:text-blue-800 ml-2 p-1 rounded-full hover:bg-gray-200 transition duration-150" 
-            title="Exportar '{{ title }}' a Excel">
+            title="Exportar '{% if status_key == 'CAPACITACION_PRACTICA' %}OJT{% else %}{{ title }}{% endif %}' a Excel">
             
             <svg class="inline w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path></svg>
         </a>
