--- a/templates/base.html
+++ b/templates/base.html
@@ -245,14 +245,14 @@
         <main class="main-content-kanban">
             {% block content %}
             <div class="pt-10 text-center text-gray-500">
-                <h2 class="text-2xl font-semibold">Bienvenido a Talent+</h2>
+                <h2 class="text-2xl font-semibold">Bienvenido a Talent + 34</h2>
                 <p>El contenido de tus tableros Kanban aparecerá aquí.</p>
             </div>
             {% endblock %}
         </main>
 
         <footer class="text-center text-xs text-gray-400 py-3 border-t border-gray-100 mt-auto px-4">
-            &copy; 2025 **Talent+** | Diseño de Interfaz de Usuario Avanzado.
+            &copy; 2025 + 34 | Diseño de Interfaz de Usuario Avanzado.
         </footer>
     </div>
     
